--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.3.6",
     "bootstrap": "^5.3.8",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.556.0",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
